# novalclaw

./: .gitignore  Cargo.toml  README.md  README_zh.md  config.template.toml
.github/workflows/: build.yml  omninova-tauri-build.yml  release.yml
_bmad-output/implementation-artifacts/: 1-1-tailwind-css-init.md  1-2-shadcn-ui-integration.md  1-3-personality-color-system.md  1-4-vitest-setup.md  1-5-sqlite-migration-system.md  1-6-config-hot-reload.md  10-1-agent-quick-switch.md  10-2-history-navigation.md  10-3-global-search.md  10-4-layout-customization.md  10-5-workspace-management.md  10-6-keyboard-shortcuts.md  10-7-accessibility.md  2-1-agent-data-model.md  2-10-agent-delete.md  2-11-local-account-management.md  2-12-config-backup-restore.md  2-13-data-encryption-privacy.md  2-2-mbti-personality-system.md  2-3-mbti-selector-component.md  2-4-personality-preview-component.md  2-5-agent-creation-ui.md  2-6-agent-list-card.md  2-7-agent-edit.md  2-8-agent-duplicate.md  2-9-agent-toggle.md  3-1-llm-provider-trait.md  3-2-openai-provider.md  3-3-anthropic-provider.md  3-4-ollama-provider.md  3-5-os-keychain-integration.md  3-6-provider-config-ui.md  3-7-provider-switching.md  4-1-session-message-model.md  4-10-command-execution.md  4-2-agent-dispatcher.md  4-3-streaming-response.md  4-4-chat-interface-basic.md  4-5-typing-indicator.md  4-6-message-input.md  (+47 more)
_bmad-output/implementation-artifacts/tests/: test-summary.md
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-14.md  prd.md  product-brief-OmniNova-Claw-2026-03-14.md  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
apps/omninova-ios/: README.md  project.yml
apps/omninova-ios/OmniNovaPhoneAgent/: ContentView.swift  OmniNovaPhoneAgentApp.swift
apps/omninova-ios/OmniNovaPhoneAgent/Models/: ConversationModels.swift
apps/omninova-ios/OmniNovaPhoneAgent/Services/: AgentGatewayClient.swift  AgentResponseSynthesizer.swift  CallManager.swift  ConversationLogStore.swift  SpamDetector.swift  SpeechPipeline.swift
apps/omninova-ios/scripts/: build-ios.sh
apps/omninova-tauri/: .eslintignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vitest.config.ts
apps/omninova-tauri/scripts/: codesign-macos-fallback.sh  stage-release-assets.mjs
apps/omninova-tauri/src/: App.css  App.tsx  index.css
apps/omninova-tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/omninova-tauri/src-tauri/capabilities/: default.json
apps/omninova-tauri/src-tauri/src/: lib.rs
apps/omninova-tauri/src/components/: SystemMonitor.tsx
apps/omninova-tauri/src/hooks/: useAgentConfiguration.test.ts  useAgentConfiguration.ts  useAgentProvider.ts  useAgentQuickSwitch.ts  useAgentStyleConfig.ts  useApiKeys.ts  useApiLogs.ts  useChannelConfig.ts  useChannels.ts  useChat.ts  useConfigImportExport.test.ts  useConfigImportExport.ts  useContextWindowConfig.ts  useConversationProvider.ts  useFocusManagement.ts  useGateway.ts  useGlobalSearch.test.ts  useGlobalSearch.ts  useGlobalShortcuts.ts  useMemoryData.test.ts  (+12 more)
crates/omninova-cli/: Cargo.toml
crates/omninova-cli/src/: config.rs  main.rs
crates/omninova-cli/src/api/: mod.rs
crates/omninova-cli/src/commands/: agent_advanced.rs  agents.rs  chat.rs  config.rs  mod.rs  skills.rs  status.rs
crates/omninova-core/: Cargo.toml
crates/omninova-core/src/: lib.rs
crates/omninova-core/src/account/: mod.rs  store.rs
crates/omninova-core/src/acp/: mod.rs
crates/omninova-core/src/agent/: agent.rs  command.rs  context_window_config.rs  dispatcher.rs  memory_context.rs  mod.rs  model.rs  overflow_processor.rs  privacy_config.rs  privacy_service.rs  prompt.rs  service.rs  soul.rs  store.rs  streaming.rs  style_config.rs  token_counter.rs  trigger_config.rs  trigger_service.rs
crates/omninova-core/src/agent/commands/: clear.rs  export.rs  help.rs  mod.rs
crates/omninova-core/src/agent/prompts/: mbti_prompts.rs  mod.rs
crates/omninova-core/src/backup/: mod.rs
crates/omninova-core/src/channels/: error.rs  event.rs  manager.rs  mod.rs  traits.rs  types.rs
crates/omninova-core/src/channels/adapters/: discord.rs  email.rs  mod.rs  slack.rs
crates/omninova-core/src/channels/behavior/: config.rs  delay.rs  mod.rs  style.rs  trigger.rs  working_hours.rs
crates/omninova-core/src/cli/: mod.rs
crates/omninova-core/src/config/: env.rs  loader.rs  mod.rs  schema.rs  validation.rs  watcher.rs
crates/omninova-core/src/db/: encrypted.rs  migrations.rs  mod.rs  pool.rs
crates/omninova-core/src/gateway/: auth.rs  logging.rs  mod.rs  openapi.rs  rate_limit.rs
crates/omninova-core/src/memory/: backend.rs  embedding.rs  episodic.rs  factory.rs  file_store.rs  lru.rs  manager.rs  metrics.rs  mod.rs  semantic.rs  working.rs
crates/omninova-core/src/notification/: mod.rs  service.rs  types.rs
crates/omninova-core/src/observability/: agent_metrics.rs  log.rs  log_viewer.rs  memory_monitor.rs  mod.rs  monitor.rs  prometheus.rs
crates/omninova-core/src/privacy/: mod.rs  storage.rs
crates/omninova-core/src/providers/: anthropic.rs  config.rs  factory.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  registry.rs  store.rs  traits.rs
crates/omninova-core/src/routing/: mod.rs
crates/omninova-core/src/security/: crypto.rs  keyring.rs  mod.rs  password.rs  penetration_playbook.rs  tool_policy.rs
crates/omninova-core/src/session/: mod.rs  model.rs  store.rs
crates/omninova-core/src/skills/: context.rs  error.rs  executor.rs  mod.rs  openclaw.rs  registry.rs  traits.rs
crates/omninova-core/src/tools/: browser.rs  mod.rs  shell.rs
crates/omninova-core/src/util/: auth.rs  crypto.rs
docs/: README.md
docs/api/: REST.md
docs/architecture/: OVERVIEW.md
docs/cli/: GUIDE.md
docs/development/: CONTRIBUTING.md  SETUP.md
skills/phone-call-assistant/: SKILL.md
(+237 files in other folders)
