[workspace]
members = [
    "apps/omninova-tauri/src-tauri",
    "crates/omninova-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["omninova"]
license = "MIT OR Apache-2.0"
description = "OmniNova Claw - Next-gen AI assistant powered by ZeroClaw architecture"

[workspace.dependencies]
# Core dependencies from ZeroClaw
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "=0.12.0", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "=1.11.0", features = ["v4", "std"] }
async-trait = "0.1"
parking_lot = "0.12"
config = "=0.13.4"
toml = "=0.8.12"
toml_edit = "=0.22.8"
directories = "6.0"
urlencoding = "2.1"
base64 = "0.22"
image = { version = "=0.25.5", default-features = false, features = ["jpeg", "png"] }
prometheus = "0.14"
time = "=0.3.36"
time-core = "=0.1.2"
time-macros = "=0.2.18"
deranged = "=0.3.11"
num-conv = "=0.1.0"
url = "=2.5.2"
idna = "=0.5.0"
indexmap = "=2.5.0"
pest = "=2.7.15"
pest_derive = "=2.7.15"
pest_generator = "=2.7.15"
pest_meta = "=2.7.15"
serde_with = "=3.11.0"
serde_with_macros = "=3.11.0"
globset = "=0.4.15"
backtrace = "=0.3.71"
handlebars = "=5.1.2"

# ICU 1.5.0 family for Rust 1.81.0 compatibility (transitive)
icu_collections = "=1.5.0"
icu_locale_core = "=1.5.0"
icu_normalizer = "=1.5.0"
icu_normalizer_data = "=1.5.0"
icu_properties = "=1.5.1"
icu_properties_data = "=1.5.0"
icu_provider = "=1.5.0"
idna_adapter = "=1.2.0"
litemap = "=0.7.3"
potential_utf = "=0.1.0"
tinystr = "=0.7.6"
writeable = "=0.5.5"
yoke = "=0.7.5"
zerotrie = "=0.1.3"
zerovec = "=0.10.3"
zerofrom = "=0.1.5"
proc-macro-crate = "=3.1.0"
home = "=0.5.9"
avif-serialize = "=0.8.2"
base64ct = "=1.6.0"
