[package]
name = "omninova-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OmniNova Claw CLI - Command line interface for managing AI agents"

[[bin]]
name = "omninova"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }

# CLI-specific dependencies
dirs = "5.0"
colored = "2.1"
tabled = "0.16"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
tar = "0.4"
flate2 = "1.0"
