[package]
name = "omninova-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "omninova_tauri_lib"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2.2.0", features = [] }
tauri-plugin-shell = "2.2.1"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-fs = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
omninova-core = { path = "../../../crates/omninova-core" }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
rusqlite = "0.32"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
